Centering submit button

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4128,7 +4128,9 @@ td:not([class]) {
 input.form-submit {
   background-color: #77BBCD;
   border-color: #73b5c5;
-  color: white; }
+  color: white;
+  margin: auto;
+  display: table; }
 
 .views-exposed-form .reset-link-button {
   background-image: url(/sites/all/themes/rubik/images/buttons.png) !important;
