--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3898,6 +3898,8 @@ input.form-submit {
   background-color: #77BBCD;
   border-color: #73b5c5;
   color: white;
+  margin: auto;
+  display: table;
 }
 
 .views-exposed-form .reset-link-button {
