--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -4216,7 +4216,8 @@ form#user-login, form#user-pass {
   border: 0px;  
 }
 
-.view-nodequeue-1 {
+.view-nodequeue-1,
+.view-panopoly-faq {
   .views-field-body {
     margin-left: 2em;
   }
