Add bottom margins to paragraphs

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -68,6 +68,9 @@ strong {
 ins {
   text-decoration: underline; }
 
+p {
+  margin-bottom: 1em; }
+
 pre {
   display: block;
   font-family: monospace;
