--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -73,6 +73,9 @@ strong          { font-weight: bolder }
 ins { 
   text-decoration: underline;
 }
+p {
+  margin-bottom: 1em;
+}
 pre {
   display: block;
   font-family: monospace;
