Fix branding region height.

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -141,7 +141,8 @@ body.tao {
   color: black; }
 
 #branding {
-  background: none !important; }
+  background: none !important;
+  height: auto; }
   #branding .breadcrumb {
     font-size: 1.2em;
     margin-left: 10.5%; }
