--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4649,20 +4649,20 @@ form#user-login, form#user-pass {
 
 /********** OPPA SPANISH STYLE **********/
 @media (min-width: 680px) {
-  body.i18n-es .superfish-1 li a {
+  body.i18n-es #block-superfish-1 #superfish-1 li a {
     font-size: 0.9em;
     padding: 0 5px; } }
 
 @media (min-width: 808px) {
-  body.i18n-es .superfish-1 li a {
+  body.i18n-es #block-superfish-1 #superfish-1 li a {
     font-size: 1em;
     padding: 0 10px; } }
 
 @media (min-width: 1268px) {
-  body.i18n-es .superfish-1 li a {
+  body.i18n-es #block-superfish-1 #superfish-1 li a {
     font-size: 1.1em; } }
 
 @media (min-width: 1348px) {
-  body.i18n-es .superfish-1 li a {
+  body.i18n-es #block-superfish-1 #superfish-1 li a {
     font-size: 1.2em; } }
 /*# sourceMappingURL=dgr_rubik_style.css.map */
