--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -4315,9 +4315,12 @@ body.i18n-es {
       font-size: 0.9em;
       padding: 0 5px;
     }
-    @include breakpoint(808px) {
-      font-size: 1em;
+    @include breakpoint(1126px) {
+      font-size: 0.9em;
       padding: 0 10px;
+    }
+    @include breakpoint(1187px) {
+      font-size: 1em;
     }
     @include breakpoint(1268px) {
       font-size: 1.1em;
