Breakpoint adjustments to main menu

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4263,8 +4263,17 @@ input.form-submit {
         .pane-superfish-1 #superfish-2 li a,
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
-          font-size: 0.9em; } }
-      @media (min-width: 705px) {
+          padding: 0 5px; } }
+      @media (min-width: 706px) {
+        #block-superfish-1 #superfish-1 li a,
+        #block-superfish-1 #superfish-2 li a,
+        .pane-superfish-1 #superfish-1 li a,
+        .pane-superfish-1 #superfish-2 li a,
+        .pane-superfish-2 #superfish-1 li a,
+        .pane-superfish-2 #superfish-2 li a {
+          font-size: 0.9em;
+          padding: 0 10px; } }
+      @media (min-width: 732px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
@@ -4272,7 +4281,7 @@ input.form-submit {
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
           font-size: 0.95em; } }
-      @media (min-width: 730px) {
+      @media (min-width: 760px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
@@ -4280,7 +4289,7 @@ input.form-submit {
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
           font-size: 1em; } }
-      @media (min-width: 780px) {
+      @media (min-width: 813px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
@@ -4288,7 +4297,7 @@ input.form-submit {
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
           font-size: 1.1em; } }
-      @media (min-width: 840px) {
+      @media (min-width: 866px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
@@ -4303,8 +4312,16 @@ input.form-submit {
         .pane-superfish-1 #superfish-2 li a,
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
+          font-size: 0.9em; } }
+      @media (min-width: 1136px) {
+        #block-superfish-1 #superfish-1 li a,
+        #block-superfish-1 #superfish-2 li a,
+        .pane-superfish-1 #superfish-1 li a,
+        .pane-superfish-1 #superfish-2 li a,
+        .pane-superfish-2 #superfish-1 li a,
+        .pane-superfish-2 #superfish-2 li a {
           font-size: 1em; } }
-      @media (min-width: 1142px) {
+      @media (min-width: 1192px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
@@ -4312,7 +4329,7 @@ input.form-submit {
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
           font-size: 1.1em; } }
-      @media (min-width: 1232px) {
+      @media (min-width: 1266px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
