--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -15,7 +15,7 @@ blockquote,
   border: 1px solid #eee;
   border-left: 5px solid #eee;
   font-style: italic;
-  margin: 1em 7%;
+  margin: 2em 7%;
   quotes: '\201c' '\201d'; }
   blockquote:before,
   .prose blockquote:before {
@@ -23,10 +23,6 @@ blockquote,
   blockquote:after,
   .prose blockquote:after {
     content: none; }
-  @media (min-width: 750px) {
-    blockquote p:nth-child(n+2):not([class]),
-    .prose blockquote p:nth-child(n+2):not([class]) {
-      padding-left: 2em; } }
 
 code {
   font-family: monospace; }
@@ -257,6 +253,9 @@ input[type="password"] {
 #autocomplete ul li {
   margin: 0;
   padding-left: 5px; }
+
+.front .pane-uuid-9eb16fb2-ba49-4f6e-8116-4766576e8283 {
+  margin-top: 2em; }
 
 div#toolbar div.toolbar-shortcuts ul {
   padding-top: 2px; }
