--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -36,7 +36,7 @@ blockquote,
   border: 1px solid #eee;
   border-left: 5px solid #eee;
   font-style: italic;
-  margin: 1em 7%;
+  margin: 2em 7%;
   quotes: '\201c' '\201d';
 
   &:before {
@@ -44,12 +44,6 @@ blockquote,
   }
   &:after { 
     content: none;
-  }
-
-  p:nth-child(n+2):not([class]) {
-    @include breakpoint(750px) {
-      padding-left: 2em;
-    }
   }
 }
 code {
@@ -309,6 +303,12 @@ input[type="password"] {
 #autocomplete ul li {
   margin: 0;
   padding-left: 5px;
+}
+
+.front {
+  .pane-uuid-9eb16fb2-ba49-4f6e-8116-4766576e8283 {
+    margin-top: 2em;
+  }
 }
 
 div#toolbar div.toolbar-shortcuts ul {
