Fix menu items alignment on loading

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4196,39 +4196,47 @@ input.form-submit {
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
   height: 1em; }
-  #block-superfish-1 #superfish-1 > li:first-child,
-  #block-superfish-1 #superfish-1 > li:first-child a,
-  #block-superfish-1 #superfish-2 > li:first-child,
-  #block-superfish-1 #superfish-2 > li:first-child a,
-  .pane-superfish-1 #superfish-1 > li:first-child,
-  .pane-superfish-1 #superfish-1 > li:first-child a,
-  .pane-superfish-1 #superfish-2 > li:first-child,
-  .pane-superfish-1 #superfish-2 > li:first-child a,
-  .pane-superfish-2 #superfish-1 > li:first-child,
-  .pane-superfish-2 #superfish-1 > li:first-child a,
-  .pane-superfish-2 #superfish-2 > li:first-child,
-  .pane-superfish-2 #superfish-2 > li:first-child a {
-    border-radius: 5px 0px 0px 5px; }
-  #block-superfish-1 #superfish-1 > li:last-child,
-  #block-superfish-1 #superfish-1 > li:last-child a,
-  #block-superfish-1 #superfish-2 > li:last-child,
-  #block-superfish-1 #superfish-2 > li:last-child a,
-  .pane-superfish-1 #superfish-1 > li:last-child,
-  .pane-superfish-1 #superfish-1 > li:last-child a,
-  .pane-superfish-1 #superfish-2 > li:last-child,
-  .pane-superfish-1 #superfish-2 > li:last-child a,
-  .pane-superfish-2 #superfish-1 > li:last-child,
-  .pane-superfish-2 #superfish-1 > li:last-child a,
-  .pane-superfish-2 #superfish-2 > li:last-child,
-  .pane-superfish-2 #superfish-2 > li:last-child a {
-    border-radius: 0px 5px 5px 0px; }
-  #block-superfish-1 #superfish-1 > li.menuparent > ul,
-  #block-superfish-1 #superfish-2 > li.menuparent > ul,
-  .pane-superfish-1 #superfish-1 > li.menuparent > ul,
-  .pane-superfish-1 #superfish-2 > li.menuparent > ul,
-  .pane-superfish-2 #superfish-1 > li.menuparent > ul,
-  .pane-superfish-2 #superfish-2 > li.menuparent > ul {
-    display: none; }
+  #block-superfish-1 #superfish-1 > li,
+  #block-superfish-1 #superfish-2 > li,
+  .pane-superfish-1 #superfish-1 > li,
+  .pane-superfish-1 #superfish-2 > li,
+  .pane-superfish-2 #superfish-1 > li,
+  .pane-superfish-2 #superfish-2 > li {
+    display: inline-block;
+    float: none; }
+    #block-superfish-1 #superfish-1 > li:first-child,
+    #block-superfish-1 #superfish-1 > li:first-child a,
+    #block-superfish-1 #superfish-2 > li:first-child,
+    #block-superfish-1 #superfish-2 > li:first-child a,
+    .pane-superfish-1 #superfish-1 > li:first-child,
+    .pane-superfish-1 #superfish-1 > li:first-child a,
+    .pane-superfish-1 #superfish-2 > li:first-child,
+    .pane-superfish-1 #superfish-2 > li:first-child a,
+    .pane-superfish-2 #superfish-1 > li:first-child,
+    .pane-superfish-2 #superfish-1 > li:first-child a,
+    .pane-superfish-2 #superfish-2 > li:first-child,
+    .pane-superfish-2 #superfish-2 > li:first-child a {
+      border-radius: 5px 0px 0px 5px; }
+    #block-superfish-1 #superfish-1 > li:last-child,
+    #block-superfish-1 #superfish-1 > li:last-child a,
+    #block-superfish-1 #superfish-2 > li:last-child,
+    #block-superfish-1 #superfish-2 > li:last-child a,
+    .pane-superfish-1 #superfish-1 > li:last-child,
+    .pane-superfish-1 #superfish-1 > li:last-child a,
+    .pane-superfish-1 #superfish-2 > li:last-child,
+    .pane-superfish-1 #superfish-2 > li:last-child a,
+    .pane-superfish-2 #superfish-1 > li:last-child,
+    .pane-superfish-2 #superfish-1 > li:last-child a,
+    .pane-superfish-2 #superfish-2 > li:last-child,
+    .pane-superfish-2 #superfish-2 > li:last-child a {
+      border-radius: 0px 5px 5px 0px; }
+    #block-superfish-1 #superfish-1 > li.menuparent > ul,
+    #block-superfish-1 #superfish-2 > li.menuparent > ul,
+    .pane-superfish-1 #superfish-1 > li.menuparent > ul,
+    .pane-superfish-1 #superfish-2 > li.menuparent > ul,
+    .pane-superfish-2 #superfish-1 > li.menuparent > ul,
+    .pane-superfish-2 #superfish-2 > li.menuparent > ul {
+      display: none; }
   #block-superfish-1 #superfish-1 li,
   #block-superfish-1 #superfish-2 li,
   .pane-superfish-1 #superfish-1 li,
