--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2458,6 +2458,56 @@ table.views-table {
     justify-content: center;
     width: 100%;
   }
+
+  #mini-panel-header {
+    width: 100%;
+  }
+
+  .row-one {
+    .left-column,
+    .right-column {
+      .inner {
+        border: 0px;
+        align-items: flex-start;
+        height: auto;
+      }
+    }
+
+    .left-column {
+      position: absolute;
+      left: 0;
+      width: 160px;
+
+      div[data-pane="2499"] {
+        display: none;
+      }
+    }
+
+    .middle-column {
+      border: 0px;
+
+      .inner {
+        text-align: center;
+      }
+    }
+
+    .right-column {
+      position: absolute;
+      right: 0;
+      width: 160px;
+    }
+
+    .pane-page-site-name {
+      display: inline-block;
+      font-size: 2em;
+    }
+    .pane-page-slogan {
+      display: inline-block;
+      font-size: 1.5em;
+      margin: 0;
+      margin-right: 1em;
+    }
+  }
 }
 
 .secure-site-notif .block-content {
