--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1698,13 +1698,17 @@ table.views-table .pane-user-field-identification {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    height: auto; }
+    height: 73px; }
   #block-panels-mini-header.sticky-header .row-one .left-column {
     position: absolute;
     left: 0;
-    width: 160px; }
-    #block-panels-mini-header.sticky-header .row-one .left-column div[data-pane="2499"] {
-      display: none; }
+    width: 160px;
+    text-align: center; }
+    #block-panels-mini-header.sticky-header .row-one .left-column .header-address-line1,
+    #block-panels-mini-header.sticky-header .row-one .left-column .header-address-line2,
+    #block-panels-mini-header.sticky-header .row-one .left-column .header-address-state,
+    #block-panels-mini-header.sticky-header .row-one .left-column .header-address-zip {
+      display: inline-block; }
   #block-panels-mini-header.sticky-header .row-one .middle-column {
     border: 0px; }
     #block-panels-mini-header.sticky-header .row-one .middle-column .inner {
@@ -1713,6 +1717,8 @@ table.views-table .pane-user-field-identification {
     position: absolute;
     right: 0;
     width: 160px; }
+    #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2499"] {
+      display: none; }
   #block-panels-mini-header.sticky-header .row-one .pane-page-site-name {
     display: inline-block;
     font-size: 2em; }
