--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2457,6 +2457,9 @@ table.views-table {
     display: flex;
     justify-content: center;
     width: 100%;
+    max-width: 1400px;
+    margin: auto;
+    position: relative;
   }
 
   #mini-panel-header {
