--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2470,6 +2470,7 @@ table.views-table {
     .left-column,
     .right-column {
       min-width: 0;
+      flex: 0 225px;
       .inner {
         align-items: flex-start;
         height: 73px;
@@ -2513,7 +2514,7 @@ table.views-table {
       display: inline-block;
       font-size: 1.5em;
       margin: 0;
-      margin-right: 1em;
+      margin-left: 1em;
     }
   }
 }
