--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1731,6 +1731,11 @@ table.views-table .pane-user-field-identification {
     font-size: 1.5em;
     margin: 0;
     margin-left: 1em; }
+  #block-panels-mini-header.sticky-header #superfish-1 > li a {
+    font-size: 1.14vw; }
+    @media (min-width: 1400px) {
+      #block-panels-mini-header.sticky-header #superfish-1 > li a {
+        font-size: 16px; } }
 
 .secure-site-notif .block-content {
   background-color: #2ECC71;
