--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2520,7 +2520,10 @@ table.views-table {
 
   #superfish-1 {
     > li a {
-      font-size: 1.14vw;
+      @include breakpoint(1106px) {
+        font-size: calc((100vw - 502px)*0.017);
+        padding: 0 0.695vw;
+      }
 
       @include breakpoint(1400px) {
         font-size: 16px;
