--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1711,7 +1711,18 @@ table.views-table .pane-user-field-identification {
       -webkit-box-sizing: border-box;
               box-sizing: border-box; }
   #block-panels-mini-header.sticky-header .row-one .left-column {
-    text-align: center; }
+    text-align: center;
+    position: absolute;
+    left: 0;
+    border: 0; }
+    #block-panels-mini-header.sticky-header .row-one .left-column .header-address {
+      display: none; }
+    @media (min-width: 1106px) {
+      #block-panels-mini-header.sticky-header .row-one .left-column {
+        position: static;
+        border: 1px; }
+        #block-panels-mini-header.sticky-header .row-one .left-column .header-address {
+          display: block; } }
     #block-panels-mini-header.sticky-header .row-one .left-column .header-address-line1,
     #block-panels-mini-header.sticky-header .row-one .left-column .header-address-line2,
     #block-panels-mini-header.sticky-header .row-one .left-column .header-address-state,
@@ -1719,10 +1730,22 @@ table.views-table .pane-user-field-identification {
       display: inline-block; }
   #block-panels-mini-header.sticky-header .row-one .middle-column .inner {
     text-align: center; }
-  #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2499"] {
-    display: none; }
-  #block-panels-mini-header.sticky-header .row-one .right-column .pane-uuid-c30f5d3d-002d-498d-85f4-941d6a820d28 {
-    margin-bottom: 0; }
+  #block-panels-mini-header.sticky-header .row-one .right-column {
+    position: absolute;
+    right: 0;
+    border: 0; }
+    #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] {
+      display: none; }
+    @media (min-width: 1106px) {
+      #block-panels-mini-header.sticky-header .row-one .right-column {
+        position: static;
+        border: 1px; }
+        #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] {
+          display: block; } }
+    #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2499"] {
+      display: none; }
+    #block-panels-mini-header.sticky-header .row-one .right-column .pane-uuid-c30f5d3d-002d-498d-85f4-941d6a820d28 {
+      margin-bottom: 0; }
   #block-panels-mini-header.sticky-header .row-one .pane-page-site-name {
     display: inline-block;
     font-size: 2em; }
@@ -1731,13 +1754,15 @@ table.views-table .pane-user-field-identification {
     font-size: 1.5em;
     margin: 0;
     margin-left: 1em; }
-  @media (min-width: 1106px) {
-    #block-panels-mini-header.sticky-header #superfish-1 > li a {
-      font-size: calc((100vw - 502px)*0.017);
-      padding: 0 0.695vw; } }
-  @media (min-width: 1400px) {
-    #block-panels-mini-header.sticky-header #superfish-1 > li a {
-      font-size: 16px; } }
+  #block-panels-mini-header.sticky-header #superfish-1 > li a {
+    font-size: 1.2em; }
+    @media (min-width: 1106px) {
+      #block-panels-mini-header.sticky-header #superfish-1 > li a {
+        font-size: calc((100vw - 502px)*0.017);
+        padding: 0 0.695vw; } }
+    @media (min-width: 1400px) {
+      #block-panels-mini-header.sticky-header #superfish-1 > li a {
+        font-size: 14.5px; } }
 
 .secure-site-notif .block-content {
   background-color: #2ECC71;
