--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2481,6 +2481,23 @@ table.views-table {
 
     .left-column {
       text-align: center;
+      position: absolute;
+      left: 0;
+      border: 0;
+
+      .header-address {
+        display: none;
+      }
+
+      @include breakpoint(1106px) {
+        position: static;
+        border: 1px;
+
+        .header-address {
+          display: block;
+        }
+      }
+
 
       .header-address-line1,
       .header-address-line2,
@@ -2497,6 +2514,23 @@ table.views-table {
     }
 
     .right-column {
+      position: absolute;
+      right: 0;
+      border: 0;
+
+      div[data-pane="2496"]{
+        display: none;
+      }
+
+      @include breakpoint(1106px) {
+        position: static;
+        border: 1px;
+
+        div[data-pane="2496"]{
+          display: block;
+        }
+      }
+
       div[data-pane="2499"] {
         display: none;
       }
@@ -2520,13 +2554,15 @@ table.views-table {
 
   #superfish-1 {
     > li a {
+      font-size: 1.2em;
+
       @include breakpoint(1106px) {
         font-size: calc((100vw - 502px)*0.017);
         padding: 0 0.695vw;
       }
 
       @include breakpoint(1400px) {
-        font-size: 16px;
+        font-size: 14.5px;
       }
     }
   }
