--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2483,7 +2483,10 @@ table.views-table {
       text-align: center;
       position: absolute;
       left: 0;
-      border: 0;
+
+      .inner {
+        border: 0;
+      }
 
       .header-address {
         display: none;
@@ -2492,6 +2495,10 @@ table.views-table {
       @include breakpoint(1106px) {
         position: static;
         border: 1px;
+
+        .inner {
+          border: 1px solid #ccc;
+        }
 
         .header-address {
           display: block;
@@ -2516,7 +2523,10 @@ table.views-table {
     .right-column {
       position: absolute;
       right: 0;
-      border: 0;
+      
+      .inner {
+        border: 0;
+      }
 
       div[data-pane="2496"]{
         display: none;
@@ -2525,6 +2535,10 @@ table.views-table {
       @include breakpoint(1106px) {
         position: static;
         border: 1px;
+
+        .inner {
+          border: 1px solid #ccc;
+        }
 
         div[data-pane="2496"]{
           display: block;
