--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2488,6 +2488,8 @@ table.views-table {
 
       .inner {
         border: 0;
+        width: auto;
+        margin-right: 1em;
       }
 
       .header-address {
@@ -2528,6 +2530,8 @@ table.views-table {
       
       .inner {
         border: 0;
+        width: auto;
+        margin-right: 1em;
       }
 
       div[data-pane="2496"]{
