--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2502,6 +2502,7 @@ table.views-table {
         .inner {
           border: 1px solid #ccc;
           width: 225px;
+          margin: 0;
         }
 
         .header-address {
@@ -2548,6 +2549,7 @@ table.views-table {
         .inner {
           border: 1px solid #ccc;
           width: 225px;
+          margin: 0;
         }
 
         div[data-pane="2496"]{
