--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2488,7 +2488,7 @@ table.views-table {
       .inner {
         border: 0;
         width: auto;
-        margin-right: 1em;
+        margin-left: 1em;
       }
 
       .header-address {
