--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2584,6 +2584,14 @@ table.views-table {
     > li a {
       font-size: 1.2em;
 
+      @include breakpoint(681px) {
+        font-size: 1.9vw;
+        padding: 0 0.7vw;
+      }
+      @include breakpoint(853px) {
+        font-size: 1.2em;
+        padding: 0 10px;
+      }
       @include breakpoint(1106px) {
         font-size: calc((100vw - 502px)*0.017);
         padding: 0 0.695vw;
@@ -2591,6 +2599,7 @@ table.views-table {
 
       @include breakpoint(1400px) {
         font-size: 14.5px;
+        padding: 0 10px;
       }
     }
   }
